Initial Seamless Client

--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "seamless-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://seamless-journey.github.io/seamless-client",
   "dependencies": {
-    "material-ui": "^1.0.0-beta.22",
+    "gh-pages": "^1.1.0",
+    "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-qr-reader": "^2.0.1",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.17",
+    "redux-bluetooth": "^0.1.21"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
