--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://seamless-journey.github.io/seamless-client",
   "dependencies": {
+    "aframe-react": "^4.3.0",
     "gh-pages": "^1.1.0",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -13,6 +14,7 @@
     "react-qr-reader": "^2.0.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-web-ar": "^1.0.0-beta2",
     "redux-bluetooth": "^0.1.21"
   },
   "scripts": {
